k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: callforge-frontend
  namespace: dev
spec:
  selector:
    app: callforge-frontend
  ports:
    - port: 80
      targetPort: 80
